--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,8 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
 }
-
-h1, h2, h3 {
+h1, h2, h3, h4 {
   color: #333;
 }
 
