--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-h1, h2, h3, h4 {
-  color: #333;
-}
-
 #root {
-  max-width: 800px;
   margin: 20px auto;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  min-width: 800px;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3, h4 {
+  color: #333;
 }
 
 .navigation {
@@ -53,11 +54,11 @@ h1, h2, h3, h4 {
 .blog-body {
   margin-top: 20px;
   color: #434343;
+  min-width: 800px;
 }
 
 .blog-entry {
   padding: 20px;
-  margin-bottom: 20px;
   background-color: #e9ecef;
   border-radius: 8px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
